--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "18.16.1",
+    "@types/node": "22.x",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "@vercel/analytics": "^1.0.0",
